--- a/build-markdown/template.erb
+++ b/build-markdown/template.erb
@@ -2,7 +2,17 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-    <title>{: title}</title>
+<%
+# Pour définir le titre
+extend ::Kramdown::Utils::Html
+title = ''
+h = @converter.root.children.find {|c| c.type == :header}
+if h
+  collector = lambda {|c| c.children.collect {|cc| cc.type == :text ? escape_html(cc.value, :text) : collector.call(cc)}.join('')}
+  title = collector.call(h)
+end
+%>
+    <title><%= title %></title>
     <meta name="generator" content="markdown->HTML.sublime-build" />
     <style type="text/css">__CSS__</style>
   </head>
